finalização html e css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Responsive Website Travel</title>
+        <title> Website Travel</title>
     </head>
     <body>
         <header class="header" id="header">
@@ -28,13 +28,13 @@
                             <a href="#home" class="nav__link active-link">Home</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#about" class="nav__link">About</a>
+                            <a href="#about" class="nav__link">Sobre</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#discover" class="nav__link">Discover</a>
+                            <a href="#discover" class="nav__link">Descobrir </a>
                         </li>
                         <li class="nav__item">
-                            <a href="#place" class="nav__link">Places</a>
+                            <a href="#place" class="nav__link">Lugares</a>
                         </li>
                     </ul>
 
@@ -60,9 +60,9 @@
 
                 <div class="home__container container grid">
                     <div class="home__data">
-                        <span class="home__data-subtitle">Discover your place</span>
-                        <h1 class="home__data-title">Explore The <br> Best <b>Beautiful <br> Beaches</b></h1>
-                        <a href="#" class="button">Explore</a>
+                        <span class="home__data-subtitle">Descubra seus lugares favoritos</span>
+                        <h1 class="home__data-title">Explore as <br> melhores <b>bonitas <br> Praias</b></h1>
+                        <a href="#" class="button">Explorar</a>
 
                     </div>
 
@@ -80,7 +80,7 @@
 
                     <div class="home__info">
                         <div>
-                            <span class="home__info-title">5 best places to visit</span>
+                            <span class="home__info-title">5 melhores lugares para visitar</span>
                             <a href="" class="button button--flex button--link home__info-button">
                                 More <i class="ri-arrow-right-line"></i>
                             </a>
@@ -97,12 +97,10 @@
             <section class="about section" id="about">
                 <div class="about__container container grid">
                     <div class="about__data">
-                        <h2 class="section__title about__title">More Information <br> About The Best Beaches</h2>
-                        <p class="about__description">You can find the most beautiful and pleasant places at the best 
-                            prices with special discounts, you choose the place we will guide you all the way to wait, get your 
-                            place now.
+                        <h2 class="section__title about__title">para mais informações  <br> para mais informações</h2>
+                        <p class="about__description">voce pode encontrar as mais bonitas e prazerosos lugares e melhores preços com um desconto especial, voce pode escolher o luhar e iremos guiar voce a todo momento, escolha seu viagem agora!!.
                         </p>
-                        <a href="#" class="button">Reserve a place</a>
+                        <a href="#" class="button">Reserva de lugares </a>
                     </div>
 
                     <div class="about__img">
@@ -119,7 +117,7 @@
             
             <!--==================== DISCOVER ====================-->
             <section class="discover section" id="discover">
-                <h2 class="section__title">Discover the most <br> attractive places</h2>
+                <h2 class="section__title">Descubra os melhores <br> Lugares atrativos</h2>
                 
                 <div class="discover__container container swiper-container">
                     <div class="swiper-wrapper">
