--- a/index.html
+++ b/index.html
@@ -337,15 +337,14 @@
                 <div class="subscribe__bg">
                     <div class="subscribe__container container">
                         <h2 class="section__title subscribe__title">Subscribe Our <br> Newsletter</h2>
-                        <p class="subscribe__description">Subscribe to our newsletter and get a 
-                            special 30% discount.
+                        <p class="subscribe__description">assine nossa nwesletter e ganhe 30% de desconto.
                         </p>
     
                         <form action="" class="subscribe__form">
                             <input type="text" placeholder="Enter email" class="subscribe__input">
     
                             <button class="button">
-                                Subscribe
+                                se inscrever
                             </button>
                         </form>
                     </div>
