--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             <section class="subscribe section">
                 <div class="subscribe__bg">
                     <div class="subscribe__container container">
-                        <h2 class="section__title subscribe__title">Subscribe Our <br> Newsletter</h2>
+                        <h2 class="section__title subscribe__title">Assine nossa <br> Newsletter</h2>
                         <p class="subscribe__description">assine nossa nwesletter e ganhe 30% de desconto.
                         </p>
     
