--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <section class="about section" id="about">
                 <div class="about__container container grid">
                     <div class="about__data">
-                        <h2 class="section__title about__title">para mais informações  <br> para mais informações</h2>
+                        <h2 class="section__title about__title">para mais informações  <br></h2>
                         <p class="about__description">voce pode encontrar as mais bonitas e prazerosos lugares e melhores preços com um desconto especial, voce pode escolher o luhar e iremos guiar voce a todo momento, escolha seu viagem agora!!.
                         </p>
                         <a href="#" class="button">Reserva de lugares </a>
@@ -168,7 +168,7 @@
                     <div class="experience__content grid">
                         <div class="experience__data">
                             <h2 class="experience__number">20</h2>
-                            <span class="experience__description">Anoa de  <br> experiencia</span>
+                            <span class="experience__description">Anos de  <br> experiencia</span>
                         </div>
 
                         <div class="experience__data">
