--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="home__container container grid">
                     <div class="home__data">
                         <span class="home__data-subtitle">Descubra seus lugares favoritos</span>
-                        <h1 class="home__data-title">Explore as <br> melhores e ma <b>bonitas <br> Praias</b></h1>
+                        <h1 class="home__data-title">Explore as <br> melhores e mais <b>bonitas <br> Praias</b></h1>
                         <a href="#" class="button">Explorar</a>
 
                     </div>
