correção texto html

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="about__container container grid">
                     <div class="about__data">
                         <h2 class="section__title about__title">para mais informações  <br></h2>
-                        <p class="about__description">voce pode encontrar as mais bonitas e prazerosos lugares e melhores preços com um desconto especial, voce pode escolher o luhar e iremos guiar voce a todo momento, escolha seu viagem agora!!.
+                        <p class="about__description">voce pode encontrar as mais bonitas e prazerosos lugares e melhores preços com um desconto especial, voce pode escolher o luhar e iremos guiar voce a todo momento, escolha seu viagem agora.!!
                         </p>
                         <a href="#" class="button">Reserva de lugares </a>
                     </div>
