correção texto html

--- a/index.html
+++ b/index.html
@@ -199,8 +199,9 @@
                 <h2 class="section__title">Video viagem</h2>
 
                 <div class="video__container container">
-                    <p class="video__description">Find out more with our video of the most beautiful and 
-                        pleasant places for you and your family.
+                    <p class="video__description">
+
+                        econtre mais informações com nosso video
                     </p>
 
                     <div class="video__content">
